--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "@types/react": "^18.2.72",
     "@types/react-dom": "^18.2.22",
     "@types/webpack": "^5.28.5",
+    "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.8.1",
+    "sass": "^1.72.0",
+    "sass-loader": "^14.1.1",
+    "style-loader": "^3.3.4",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3",
